correction css collapse

--- a/src/style/rental.css
+++ b/src/style/rental.css
@@ -1,6 +1,6 @@
 .rentalContent__container {
 	display: flex;
-	flex-direction: column;
+	flex-direction: column-reverse;
 }
 
 @media screen and (min-width: 768px) {
@@ -12,7 +12,7 @@
 		line-height: 1.625rem;
 	}
 	.rentalContent__container {
-		flex-direction: row;
+		flex-direction: row-reverse;
 		gap: 5%;
 	}
 }
